# contracts

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENCE  LICENCE.md  Makefile  Makefile.lean  README.md  foundry.toml  pyproject.toml  remappings.txt
assets/: desc.yml
assets/createx3-salts/: salts-b712_b712.txt  salts-bbbb_bb.txt
assets/desc/: sol.yml
assets/headers/: py.txt  rs.txt  sh.txt  sol.txt
docs/: README.md  arch.txt  architecture.md  deployment.md  testing.md  todo.md  vault-allocation.md
docs/access-control/: protocol-flows.md  roles.md
docs/alm/: protocol-flows.md  user-flows.md
docs/management/: protocol-flows.md
docs/metrics/: allocation.md  alm-slippage.md  alm-vwap.md  liquidity.md  tvl-accounting.md
docs/oracles/: protocol-flows.md  use-cases.md
docs/treasury/: fees.md  protocol-flows.md
evm/: .env.example  .forgeignore  BTR.sol  BTRDiamond.sol  BTRFactory.sol  BTRTypes.sol  BTRVaultInit.sol  foundry.toml  registry.json  remappings.txt
evm/facets/: ALMFacet.sol  AccessControlFacet.sol  DiamondCutFacet.sol  DiamondLoupeFacet.sol  (+10 more)
scripts/: DeployDiamond.s.sol  analyze_selector_overlap.py  build.sh  check-branch.sh  check-name.py  check_branch.sh  check_desc_coverage.py  check_name.py  contracts.json  env_setup.sh  extract_selectors.py  facets.json  format-code.sh  format-headers.sh  format.sh  format_code.sh  format_headers.py  generate_all_selectors.py  generate_deployer.py  generate_deployers.py  generate_deployment.sh  get-swap-data.sh  get_swap_data.sh  get_swap_data_test.sh  install_deps.sh  organize_imports.py  release.py  release.sh  setup.sh  strip_headers.py  test.sh  test_init.sh
templates/: AdapterDeployer.sol.tpl  BaseDiamondTest.t.sol.tpl  DiamondDeployer.sol.tpl  DiamondDeployerScript.s.sol.tpl  FacetDeployer.sol.tpl  MainDiamondDeployer.sol.tpl  TokenDeployer.sol.tpl
tools/create3miner/: Cargo.toml  README.md
tools/create3miner/src/: lib.rs  main.rs
tools/create3miner/src/common/: create3.rs  mod.rs  pattern.rs
tools/create3miner/src/cpu/: miner.rs
tools/create3miner/src/gpu/: miner.rs  shader.wgsl
tools/create3miner/tests/: benchmark.rs  common.rs  cpu_tests.rs  gpu_tests.rs  mod.rs
(+420 files in other folders)
