[project]
name = "btr-supply-contracts"
version = "0.3.0"
description = "BTR Supply smart contracts: EVM, Solana, Sui"
readme = "README.md"
changelog = "CHANGELOG.md"
requires-python = ">=3.9"
dependencies = [ "pyyaml>=6.0",]
[[project.authors]]
name = "BTR Supply"
email = "contact@btr.supply"

[project.license]
text = "MIT"

[tool.uv]
dev-dependencies = [ "toml>=0.10.2", "yapf>=0.40.2", "ruff>=0.3.5", "pre-commit>=3.7.0", "pyyaml>=6.0",]

[tool.ruff.lint]
ignore = [ "E731", "E701",]
